force-app/main/default/objects/Order/fields/isMosaicDirect__c.field-meta.xml
<CustomField>
    <fullName>isMosaicDirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mosaic Direct?</label>
    <type>Checkbox</type>
</CustomField>