force-app/main/default/objects/Order/fields/OrderCurrency__c.field-meta.xml
<CustomField>
    <fullName>OrderCurrency__c</fullName>
    <description>This field receives the Order currency as sent by SAP</description>
    <label>Order Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>