force-app/main/default/objects/Order/fields/PMC_CPQ_BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture Bill To Account for the Order</description>
    <inlineHelpText>Bill To Account for the Order.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bill To Account)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>