force-app/main/default/objects/Order/fields/PMC_CPQ_CreditExposure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CreditExposure__c</fullName>
    <label>Credit Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>