force-app/main/default/objects/Order/fields/PMC_CPQ_FixedPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FixedPaymentDueDate__c</fullName>
    <description>This field captures the fixed payment due date for this order.</description>
    <inlineHelpText>Fixed payment due date for this order.</inlineHelpText>
    <label>Fixed Payment Due Date</label>
    <type>Date</type>
</CustomField>