force-app/main/default/objects/Order/fields/PMC_CPQ_HoldSubStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_HoldSubStatus__c</fullName>
    <label>Hold Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Block</fullName>
            </value>
            <value>
                <fullName>Billing Block</fullName>
            </value>
            <value>
                <fullName>Credit Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>