force-app/main/default/objects/Order/fields/PMC_CPQ_IsFPD__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsFPD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is a flag to check whether a order contains a FPD order line or not.</description>
    <label>Order Is FPD</label>
    <type>Checkbox</type>
</CustomField>