force-app/main/default/objects/Order/fields/PMC_CPQ_LegacyOrderID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LegacyOrderID__c</fullName>
    <label>Legacy Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>