force-app/main/default/objects/Order/fields/PMC_CPQ_OrderIntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderIntegrationMessage__c</fullName>
    <description>The Integration message of external callout.</description>
    <label>Integration Message</label>
    <type>TextArea</type>
</CustomField>