force-app/main/default/objects/Order/fields/PMC_CPQ_OrderIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderIntegrationStatus__c</fullName>
    <description>The staus of a callout made to an external system.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>