force-app/main/default/objects/Order/fields/PMC_CPQ_OrderReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderReason__c</fullName>
    <label>Order Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>