force-app/main/default/objects/Order/fields/PMC_CPQ_Payer__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture the Payer for the Order.</description>
    <inlineHelpText>Payer Account for the Order.</inlineHelpText>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Payer)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>