force-app/main/default/objects/Order/fields/PMC_CPQ_PurchaseOrderDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PurchaseOrderDate__c</fullName>
    <description>This field captures the Purchase Order date</description>
    <inlineHelpText>Purchase Order Date for this Order.</inlineHelpText>
    <label>Purchase Order Date</label>
    <type>Date</type>
</CustomField>