force-app/main/default/objects/Order/fields/PMC_CPQ_SalesAgreement__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>