force-app/main/default/objects/Order/fields/PMC_CPQ_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to hold the lookup to Sales Area</description>
    <label>Sales Area</label>
    <referenceTo>PMC_SS_SalesArea__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>