force-app/main/default/objects/Order/fields/PMC_CPQ_SAPContractReference__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPContractReference__c</fullName>
    <description>Created as part of GDASF-8818. This field will hold the SAP Contract reference (carried over from quote lines, when order is created)</description>
    <label>SAP Contract Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>