force-app/main/default/objects/Order/fields/PMC_CPQ_SAPOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderNumber__c</fullName>
    <description>This field captures the order number in SAP.</description>
    <externalId>true</externalId>
    <inlineHelpText>Reference Order Number in SAP.</inlineHelpText>
    <label>SAP Order Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>