force-app/main/default/objects/Order/fields/PMC_CPQ_ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to reference Shipping account.</description>
    <inlineHelpText>Ship To Account for the order.</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship To Account)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>