force-app/main/default/objects/Order/fields/PMC_CPQ_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture Sold To Account for the Order.</description>
    <inlineHelpText>Sold To Account for the Order.</inlineHelpText>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>