force-app/main/default/objects/Order/fields/PMC_DH_ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ContractEndDate__c</fullName>
    <label>PMC DH Contract End Date</label>
    <type>Date</type>
</CustomField>