force-app/main/default/objects/Order/fields/PMC_DH_OrderChannel__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_OrderChannel__c</fullName>
    <label>Sales Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>