force-app/main/default/objects/Order/fields/PMC_DH_OrderCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_OrderCreatedBy__c</fullName>
    <label>Order Placed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>