force-app/main/default/objects/Order/fields/PMC_DH_OrderTypeCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_OrderTypeCode__c</fullName>
    <label>Order Type Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>