force-app/main/default/objects/Order/fields/PMC_DH_SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SalesChannel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
                <default>true</default>
                <label>Others</label>
            </value>
            <value>
                <fullName>Mosaic Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>