force-app/main/default/objects/Order/fields/PMC_DH_SAPOrderCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAPOrderCreatedDate__c</fullName>
    <label>SAP Order Created Date</label>
    <type>Date</type>
</CustomField>