force-app/main/default/objects/Order/fields/PMC_DH_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_TotalPrice__c</fullName>
    <label>Total Price</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>