force-app/main/default/objects/Order/recordTypes/PMC_CPQ_Domestic.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_Domestic</fullName>
    <active>true</active>
    <label>Domestic</label>
</RecordType>