force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>PMC_CPQ_PO__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>PMC_CPQ_SAPOrderNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_SAPOrderNumber__c</field>
        <operation>equals</operation>
        <value>30483360</value>
    </filters>
    <label>All Activated Orders</label>
</ListView>