force-app/main/default/objects/Order/listViews/MD_Stuck_Orders.listView-meta.xml
<ListView>
    <fullName>MD_Stuck_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>PMC_CPQ_SAPOrderNumber__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_SAPOrderNumber__c</field>
        <operation>equals</operation>
    </filters>
    <label>MD Stuck Orders</label>
</ListView>