force-app/main/default/objects/Order/listViews/PMC_CPQ_AllCompletedOrders.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_AllCompletedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>PMC_CPQ_PO__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>PMC_CPQ_SAPOrderNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>All Completed Orders</label>
</ListView>