force-app/main/default/objects/Order/listViews/PMC_CPQ_MyOrder.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_MyOrder</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>PMC_CPQ_PO__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>PMC_CPQ_SAPOrderNumber__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Order</label>
</ListView>